[package]
name = "fs-esl"
version = "0.1.0"
edition = "2021"
authors = ["houxirens@qq.com"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.18"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full", "io-util"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.4.0"
tokio-stream = "0.1.14"
env_logger = "0.10.0"
futures = "0.3.28"
uuid = { version = "1.3.3", features = ["v4"] }
